# api/handlers/resources/get.go
@@ -32,10 +32,11 @@ func get(service resource.Service) gin.HandlerFunc {
 // @Description Get a resource by its ID
 // @Accept  json
 // @Produce  json
+// @Param id path string true "Resource ID"
 // @Success 200 {object} resource.Element	"ok"
 // @Success 404 {object} views.ErrView
 // @Success 500 {object} views.ErrView
-// @Router /v1/resources [get]
+// @Router /v1/resources/{id} [get]
 func getByID(service resource.Service) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		id := c.Param("id")
