# api/handlers/resources/routes.go
@@ -12,4 +12,5 @@ func ResourceRoutes(r *gin.RouterGroup, service resource.Service) {
 	router.GET("/", get(service))
 	router.GET("/:id", getByID(service))
 	router.POST("/", post(service))
+	router.DELETE("/:id", delete(service))
 }
